# PKdev

./: .gitignore  CHANGELOG.md  PROJECT.md  README.md  README_en.md  devpi  herdr-plugin.toml  start  tickets.db  tickets.db-shm  tickets.db-wal
kaku/: kaku.lua  workspace.lua
kanban/: Cargo.toml  tickets.db
kanban/src/: app.rs  db.rs  herdr.rs  main.rs  theme.rs  ui.rs
scripts/: install-fonts.sh  schema.sql
