[package]
name = "kanban"
version = "0.1.0"
edition = "2021"
description = "Kanban TUI clickable pour orchestration d'agents"

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = 2
lto = true
